Modify Chat header and RightPane to completely use online_status and profile_photo data from the conversation object which is stored in state for a faster update on conversation switch; Fix bug of seen event not being emitted after switch from user info screen to ScrollView on mobile/smaller screens; Fix multiple socket initialization bug causing messages to sometimes duplicate; Use the more efficient loopThru func in place of the native for loop in Chat.MiddlePane in order for to prevent redundant loopings through messages.

--- a/teach-me-ui/src/styles/_responsive.scss
+++ b/teach-me-ui/src/styles/_responsive.scss
@@ -118,17 +118,6 @@
       }
     }
 
-    .chat-scroll-view {
-      > *,
-      > div {
-        max-width: 40rem;
-      }
-
-      .new-messages-bar {
-        max-width: 42rem !important;
-      }
-    }
-
     .chat-right-pane {
       opacity: 0;
       animation: unset;
@@ -147,10 +136,6 @@
 
     .controls {
       max-width: 3.25rem;
-    }
-
-    .msg-wrapper {
-      max-width: 80%;
     }
   }
 }
@@ -380,7 +365,6 @@
   //chat box style(s)
   .ChatBox {
     .msg-wrapper {
-      max-width: 90%;
       font-size: 0.95rem;
     }
   }
@@ -450,7 +434,6 @@
     justify-content: center;
     align-items: center;
     font-style: italic;
-    
   }
 }
 
